--- a/myapp/build.gradle
+++ b/myapp/build.gradle
@@ -22,6 +22,8 @@ repositories {
 }
 
 dependencies {
+	// https://mvnrepository.com/artifact/at.favre.lib/bcrypt
+	implementation group: 'at.favre.lib', name: 'bcrypt', version: '0.10.2'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
